# orbit_war

./: CLAUDE.md  download.py  main.py  pyproject.toml
docs/superpowers/plans/: 2026-05-09-w1-infra-and-baseline.md  2026-05-09-w2-heuristic-core.md  2026-05-10-w3-orbit-aware-and-lookahead.md  2026-05-10-w4-consolidation-fix-adversarial-and-tuning.md
docs/superpowers/specs/: 2026-05-09-orbit-wars-bot-design.md
orbit_war/bots/: greedy_baseline.py  heuristic_v1.py  heuristic_v2.py  heuristic_v3.py  heuristic_v4.py  heuristic_v5.py  public_tactical.py  random_bot.py  starter_bot.py
orbit_war/eval/: features.py
orbit_war/eval_harness/: cli.py  gate.py  match.py  parallel.py  stats.py
orbit_war/plan_gen/: aim.py  composer.py  filters.py  opponent.py  step.py  templates.py
orbit_war/sim/: game.py  observation.py  orbits.py  physics.py
orbit_war/tuning/: data.py  regression.py  step_data.py
orbit_war/tuning/step_weights/: v5.json
scripts/: fit_heuristic_v2_weights.py  fit_heuristic_v5_weights.py  pull_public_tactical.sh  submit_bot.sh  submit_starter.sh
tests/: conftest.py  test_aim.py  test_bots.py  test_composer.py  test_eval_features.py  test_filters.py  test_forward_sim.py  test_gate.py  test_heuristic_v1.py  test_heuristic_v2.py  test_heuristic_v3.py  test_heuristic_v4.py  test_heuristic_v5.py  test_match.py  test_observation.py  test_opponent.py  test_orbits.py  test_package_smoke.py  test_parallel.py  test_physics.py  test_public_tactical.py  test_stats.py  test_step.py  test_step_data.py  test_templates.py  test_tuning_data.py  test_tuning_regression.py
(+1 files in other folders)
