[project]
name = "orbit-war"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=2.1.2",
    "kaggle-environments>=1.28.0",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbit_war"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:kaggle_environments.*",
]

[project.scripts]
ow-gate = "orbit_war.eval_harness.cli:main"
